--- a/_includes/themes/dinky/default.html
+++ b/_includes/themes/dinky/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="author" content="{{ site.author.name }}" />
+    <meta name="eric.yu" content="{{ site.author.name }}" />
     <title>{{ page.title }}</title>
 
     <link rel="stylesheet" href="{{ ASSET_PATH }}/css/styles.css">
@@ -40,10 +40,10 @@
         {% endif %}
         {% if site.author %}
         <div class="misc vcard">
-          <h4>about</h4>
+		  <p class="header">about</p>
           <ul>
             {% if site.author.email %}
-            <li class="contact"><address><span class="author fn n">{{ site.author.name }}</span> - <span class="fn email">{{ site.author.email }}</span></address></li>
+            <li class="contact"><address><span class="fn email">{{ site.author.email }}</span></address></li>
             {% endif %}
             {% if site.author.github %}
             <li class="github"><a href="http://github.com/{{ site.author.github }}/" rel="me">github.com/{{ site.author.github }}</a></li>
@@ -71,9 +71,8 @@
       <section>
       {{ content }}
       </section>
-
       <footer>
-      <p><small>Hosted on <a href="http://pages.github.com/">GitHub Pages</a> using the <a href="https://github.com/sodabrew/theme-dinky">Dinky theme</a> for <a href="http://jekyllbootstrap.com/">Jekyll Bootstrap</a></small></p>
+      <small>Hosted on <a href="http://pages.github.com/">GitHub Pages</a></small>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><!--<![endif]-->
