--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,10 @@ layout: default
 {% include JB/setup %}
 {% include themes/hooligan/post.html %}
 
+<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?autoload=true&amp;skin=sunburst&amp;lang=css" defer="defer"></script>
+<!--?prettify lang=html linenums=true?-->
+<pre class="prettyprint" id="quine" style="border:4px solid #88c"></pre>
+
  <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
