--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
 
 <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?autoload=true&amp;skin=sunburst&amp;lang=css" defer="defer"></script>
 <!--?prettify lang=html linenums=true?-->
-<pre class="prettyprint" id="quine" style="border:4px solid #88c"></pre>
+<pre class="prettyprint linenums" id="quine" style="border:4px solid #88c"></pre>
 
  <div id="disqus_thread"></div>
     <script type="text/javascript">
